--- a/config-test/service.yml
+++ b/config-test/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: python-hello-world
-  namespace: razeedeploy
+  namespace: test
   labels:
     app: python-hello-world
 spec:
