--- a/config-test/route.yml
+++ b/config-test/route.yml
@@ -2,7 +2,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: python-hello-world
-  namespace: razeedeploy
+  namespace: test
   labels:
     app: python-hello-world
 spec:
