--- a/config-test/deployment.yml
+++ b/config-test/deployment.yml
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app: python-hello-world
+        app: python-hello-world-1
     spec:
       containers:
         - name: python-hello-world
