--- a/config-test/deployment.yml
+++ b/config-test/deployment.yml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app: python-hello-world
 spec:
+  replicas: 3
   selector:
     matchLabels:
       app: python-hello-world
