--- a/config-test/deployment.yml
+++ b/config-test/deployment.yml
@@ -17,13 +17,7 @@ spec:
     spec:
       containers:
         - name: python-hello-world
-          image: ${IMAGE}
-          env:
-            - name: IMAGE
-              valueFrom:
-                configMapKeyRef:
-                  name: python-hello-world-config
-                  key: image
+          image: image-registry.openshift-image-registry.svc:5000/test/python-hello-world:latest
           ports:
             - name: http
               containerPort: 5000
